# ChangeLog for dev-lang/php
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/php/ChangeLog,v 1.321 2009/04/10 10:25:55 hoffie Exp $

*php-5.2.9-r1 (10 Apr 2009)
*php-5.2.9 (10 Apr 2009)

  10 Apr 2009; Christian Hoffmann <hoffie@gentoo.org> +php-5.2.9.ebuild,
  +php-5.2.9-r1.ebuild:
  version bump to fix several possible security issues, details to follow,
  bug 260576 (5.2.9 is more or less vanilla php, 5.2.9-r1 has lots of
  additional backported patches)

  07 Apr 2009; Christian Faulhammer <fauli@gentoo.org> php-5.2.8-r1.ebuild,
  php-5.2.8-r2.ebuild:
  revert from EAPI 2 to 0 again, see bug 265245

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> php-5.2.8-r1.ebuild,
  php-5.2.8-r2.ebuild:
  arm/ia64/s390/sh stable

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org> php-5.2.8-r1.ebuild,
  php-5.2.8-r2.ebuild:
  use EAPI 2 for USE flag check

  02 Feb 2009; Mike Frysinger <vapier@gentoo.org> metadata.xml:
  Document local USE=pic flag.

  01 Feb 2009; Tobias Klausmann <klausman@gentoo.org> php-5.2.8-r2.ebuild:
  Stable on alpha, bug #249703

  31 Jan 2009; Tiago Cunha <tcunha@gentoo.org> php-5.2.8-r2.ebuild:
  stable sparc, bug 249703

  25 Jan 2009; Markus Meier <maekke@gentoo.org> php-5.2.8-r2.ebuild:
  x86 stable, bug #249703

  24 Jan 2009; Tobias Scherbaum <dertobi123@gentoo.org> php-5.2.8-r2.ebuild:
  ppc stable, bug #249703

  23 Jan 2009; Brent Baude <ranger@gentoo.org> php-5.2.8-r2.ebuild:
  Marking php-5.2.8-r2 ppc64 for bug 249703

  20 Jan 2009; Tobias Heinlein <keytoaster@gentoo.org> php-5.2.8-r2.ebuild:
  amd64 stable wrt security bug 249703

  20 Jan 2009; Jeroen Roovers <jer@gentoo.org> php-5.2.8-r2.ebuild:
  Stable for HPPA (bug #249703).

*php-5.2.8-r2 (11 Jan 2009)

  11 Jan 2009; Christian Hoffmann <hoffie@gentoo.org>
  -files/70_mod_php.conf-apache2,
  +files/70_mod_php5_concurr.conf-apache2-r1,
  +files/70_mod_php5.conf-apache2-r1,