@@ -6,9 +6,11 @@ DIST php-5.2.8.tar.bz2 9827180 RMD160 d38fe5d918c335089a027600a93d950f417a7e98 S
 DIST php-5.2.9.tar.bz2 10203122 RMD160 fc2b316ff05462667704027cf2a1a4ac0a238422 SHA1 1c738dbd7e3f8d723b6ce2e0fbc90a69e249f5f0 SHA256 30166dda7c3d8bdcb2753ab79260be25454cdf3673d681b7651f8d32006ee2a6
 DIST php-patchset-5.2.8-r2.tar.bz2 15437 RMD160 d01fadd80cd1db8216eb157ee691a3d30ab8edb7 SHA1 12dff06a95722306fae334e84ab9251265c35540 SHA256 f372a3e4bb19b568030eab5d1c4bffa21f5b217564e3c658952382d60c657f50
 DIST php-patchset-5.2.9-r1.tar.bz2 14188 RMD160 e6be175ebf84e81c2ee1738a81e016d5df374283 SHA1 abc34c17fd64419f4bb1458d12ebeee82691571c SHA256 225a1ccaaa4792801d98d6d38f1c8361fe655d0276610456b8a9ed896c9a7938
+DIST php-patchset-5.2.9-r2.tar.bz2 17294 RMD160 1367ccf198686df2ff81408b1d6fb7096fa6790b SHA1 d5d1528aa775ff4af9251a6843a5f18bffcb4795 SHA256 ba77dab6cf96f874070afee76d1ad7b48a55a8738bc0e0bc6c54f011b9070dc1
 DIST suhosin-patch-5.2.8-0.9.6.3.patch.gz 23125 RMD160 9c8a0972e75e1ad887b940f57aec4d877e9364bd SHA1 b1f12dd856778e734837819114d278adaa3cfe05 SHA256 85e6262f53014e393977d1efed2d3a7e686767a07f96b14b2c3f126f694aee46
 DIST suhosin-patch-5.2.9-0.9.7.patch.gz 23026 RMD160 1d2e01a935c4bbc9e858796f8f6004b4f75950b3 SHA1 4197644330a4f182f4dd64beb9db29406ed300ca SHA256 6f7a86cff1cdd1007ba248292f6adfe3b7c01adfed56c2e937c87c60210bbc38
 EBUILD php-5.2.8-r2.ebuild 16959 RMD160 f67a0abdd6d7ba45f6074a65ff0e4d8e09b6b508 SHA1 9a5be80c6960141dc3a8f7a2a41177633212dffb SHA256 dc907a6e5ee278c66e36f889d298061660cd7813f98758fdde13a4b6b2f348ec
 EBUILD php-5.2.9-r1.ebuild 16957 RMD160 4fbaa141ac51367e1656a51b51b14c8b05a76cbb SHA1 334085d2ff8d636b23ab0baf17ff5db613be2779 SHA256 ab9c0e43590d7f71fc65a6f874c3ed8d2358a2718e73dedbe54dd9ce64b33638
-MISC ChangeLog 56859 RMD160 aaef7e08437bb9d88da3f35137bebf42b1ee48dc SHA1 d6763c1da9d2b01e9b89d4ddfc622817d0a9da31 SHA256 eed400046efcb8a00f3dbd4fa07f152e67d7f391c4b769b98fa657c9a528a48c
+EBUILD php-5.2.9-r2.ebuild 16957 RMD160 51563d68255b7429f12be9c0940a57d8ae068133 SHA1 a7b026b0bcf58f3b76e3a1f5e0067da291257fd5 SHA256 a0eb881f50a09b933ead4e546c6d736f466ea6c46d17fd26fe7ddfbc2b33c1e9
+MISC ChangeLog 57113 RMD160 0ebdfb3624cd8d83c6008edab6e4559a1b2cb655 SHA1 103d88085877de0682eb6329a8fd61104a4dbe96 SHA256 463d526daa85c9451ee5efd12e311c2610c6a74ca5828800e29ee94c48e4ef38
 MISC metadata.xml 1579 RMD160 0920abfbde60e12facdc827d194fba87bb7c30c4 SHA1 afeb224e80c98a8ab22957acea61cc5313be51d6 SHA256 81a1bf83b5827ef4310c576d1b3ffb416f70dafe6ceedfedff8a58480ef1609c
